# internal/handlers/auth_handler.go
@@ -1,6 +1,7 @@
 package handlers
 
 import (
+	"KvantTZ/internal/models"
 	"KvantTZ/internal/services"
 	"net/http"
 
@@ -15,11 +16,19 @@ func NewAuthHandler(authService services.AuthService) *AuthHandler {
 	return &AuthHandler{authService: authService}
 }
 
+// Login godoc
+// @Summary Аутентификация пользователя
+// @Description Выполняет вход пользователя и возвращает JWT-токен
+// @Tags auth
+// @Accept json
+// @Produce json
+// @Param  input body models.Credentials true "Данные пользователя"
+// @Success 200 {object} map[string]string "{"token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...}"
+// @Failure 400 {object} map[string]string "{"error": "Email и пароль обязательны"}"
+// @Failure 401 {object} map[string]string "{"error": "Неверные учетные данные"}"
+// @Router /auth/login [post]
 func (h *AuthHandler) Login(c *gin.Context) {
-	var credentials struct {
-		Email    string `json:"email"`
-		Password string `json:"password"`
-	}
+	var credentials models.Credentials
 	if err := c.ShouldBindJSON(&credentials); err != nil || credentials.Email == "" || credentials.Password == "" {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "Email и пароль обязательны"})
 		return
